--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Starter</title>
+    <title>A1.2 Comp Grafica</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
